--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "sqlite3": "~2.2.0",
     "sequelize": "~2.0.0",
     "pg": "~4.1.1",
-    "pg-hstore": "~2.3.2"
+    "pg-hstore": "~2.3.2",
+    "method-override": "~2.3.1"
   }
 }
